# AOC22

./: pyproject.toml
data/: README.md
src/: _template.cr  _template.py  day01.cr  day01.py  day02.cr  day02.py  day03.cr  day04.cr  day05.cr  day06.cr  day07.cr  day07.py  day08.cr  day09.cr  day10.cr  day11.cr  day12.cr  day13.cr  day14.cr  day15.cr  day16.cr  day17.cr  day18.cr  day19.cr  day20.cr  day21.cr  day21.py  day22.cr  day23.cr  day24.py  day25.cr  hello.py
src/utils/: manhattan.py  parsing.py  puzzle.cr  puzzle.py  vec2.cr
tests/: test_parsing.py
